# aurora

./: .gitignore  BACKLOG.txt  DESIGN.md  NOTES.txt  setup.cfg
archive/: app.py  app2.py  aurora.db  conf.py  config.py  model.py  quickstart.py  server.py  watcher.py
aurora/: __init__.py  api.py  app.py  catalog.py  cli.py  config.py  database.py  helpers.py  models.py  monitor.py  util.py
aurora/drivers/: util.py
aurora/drivers/json/: json.py
