[metadata]
name = aurora
author = Andy Kee
description = Science image management on the web
platform = any

[options]
packages = find:
install_requires = 
    cheroot
    Flask >= 0.10.1
    flask-cors
    SQLAlchemy >= 1.3
    watchdog
python_requires >= 3.6

[options.entry_points]
console_scripts = 
    aurora = aurora.app:main
    aurora-quickstart = aurora.quickstart:main
